# 2017_12_cmake_obj_libs_issue

./: CMakeLists.txt  README.md  appveyor.yml  c_stuff.c  c_stuff.h  cpp_stuff.cpp  cpp_stuff.hpp  driver.cpp  example.cpp  example.hpp
